MSTR-158: Fix requirement checks & wizard navigation (#607)
* Fix required docs list in carrier selection step

List of required documents was not being displayed at all, due to
changes in the requirements object structure.

* Remove length rules for region and postal code

In order to not to restrict values from countries other than US.

* Add CSV file icon for carrier selection step

* Remove CSF icon fills and tweak style

* Prevent look-up numbers twice on port draft load

If the step to be loaded is Carrier Selection, then do not look up
numbers and load requirements during the port request draft load,
because this will be done when the step loads up.

* Store bill and BTN data only if provided

Also delete old data from the Ownership Confirmation step, to prevent
keeping it when the wizard merges the new data.

* Display and save dates using account/user timezone

* Omit empty objects properly from port request

* Delete date and notifications old data

To avoid merging old and new data.

* Keep original ownership data until step completion

* Show delete btn for notification email if not empty

* Un-complete following steps if current is invalid

* Set jump step only to forward after carrier selection

* Force user to check carrier selection if changed

When the numbers to port are modified.

* Prevent undefined error while getting bill data

* Set validation value for acknowledged bill

--- a/src/apps/common/i18n/en-US.json
+++ b/src/apps/common/i18n/en-US.json
@@ -108,6 +108,9 @@
 							},
 							"placeholders": {
 								"winningCarrier": "Select based on best quality"
+							},
+							"messages": {
+								"carrierHasChanged": "Carrier information has changed. Please check it before continue."
 							}
 						},
 						"requiredDocuments": {
